--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,13 @@ ENV/
 env.bak/
 venv.bak/
 
+# Model checkpoints
+checkpoints/
+
+# Generated outputs / caches
+outputs/
+data/processed_images/
+
 # Spyder project settings
 .spyderproject
 .spyproject
